--- a/styles/course.css
+++ b/styles/course.css
@@ -1,3 +1,5 @@
+
+
 @charset "utf-8";
 /* CSS Document */
 
@@ -1883,4 +1885,8 @@ section
 .cr_list li a:hover
 {
 	color: #14bdee;
+}
+.center_text
+{
+	text-align: center;
 }
