--- a/styles/courses.css
+++ b/styles/courses.css
@@ -901,15 +901,17 @@ section
 }
 .course_image
 {
-	width: 100%;
+	width:50px;
+	height: 100px;
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
 	overflow: hidden;
 }
 .course_image img
 {
-	max-width: 100%;
-	height: 400px;
+	width:50px;
+	height: 100px;
+	overflow: hidden;
 }
 .course_body
 {
@@ -918,10 +920,7 @@ section
 	padding-right: 30px;
 	padding-bottom: 23px;
 }
-.course_title
-{
 
-}
 .course_title a
 {
 	font-family: 'Roboto Slab', serif;
