--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -342,6 +342,7 @@ section
 {
 	width: 100%;
 	background: #FFFFFF;
+	box-shadow: 0px 5px 40px rgba(29,34,47,0.15);
 }
 .header_content
 {
@@ -642,6 +643,7 @@ section
 .menu_nav ul li
 {
 	margin-bottom: 9px;
+	
 }
 .menu_nav ul li a
 {
@@ -656,10 +658,14 @@ section
 	-ms-transition: all 200ms ease;
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
+
+	
 }
 .menu_nav ul li a:hover
 {
 	color: #14bdee;
+	text-decoration:red;
+
 }
 .menu .search
 {
@@ -814,8 +820,9 @@ section
 {
 	width: 832px;
 	margin: 0 auto;
-	margin-top: 35px;
+	margin-top: 5px;
 }
+
 .home_search_form div
 {
 	width: calc(100% - 140px);
@@ -869,6 +876,10 @@ section
 	font-size: 14px !important;
 	font-weight: 400 !important;
 	color: #b5b8be !important;
+}
+.home_search_input:hover
+{
+	border:  1px solid #14bdee;
 }
 .dropdown_item_select
 {
@@ -1674,6 +1685,7 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
+
 .news_post_link a:hover
 {
 	color: #14bdee;
@@ -1840,6 +1852,10 @@ section
 .footer_content
 {
 	padding-bottom: 53px;
+}
+.logo_container img
+{
+	margin-top: 10px;
 }
 .footer_logo_text
 {
